--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_PROJECTSE331_BODYMOM }}'
-          projectId: projectse331-bodymom
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_SE331_PROJECT01_HELP }}'
+          projectId: se331-project01-help
