--- a/.github/workflows/deploy-main.yml
+++ b/.github/workflows/deploy-main.yml
@@ -27,7 +27,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
-          tags: sasiphaz/help-me-fe:latest
+          tags: sasipha/help-me-fe:latest
       -
         name: Copy file via ssh
         uses: appleboy/scp-action@v0.1.4
